--- a/src/components/Posts/PostList/PostListHor.module.css
+++ b/src/components/Posts/PostList/PostListHor.module.css
@@ -1,1 +1,5 @@
-.row_1 {@apply w-full divide-y divide-gray-300}
+.row_1 {
+    width: 100%; /* w-full */
+    border-top: 1px solid #d1d5db; /* divide-gray-300 */
+    border-bottom: 1px solid #d1d5db; /* divide-gray-300 */
+}
