--- a/src/components/Posts/PostList/PostListVer.module.css
+++ b/src/components/Posts/PostList/PostListVer.module.css
@@ -1,1 +1,7 @@
-.row_1 {@apply w-full divide-y divide-gray-300}
+.row_1 {
+    width: 100%; /* w-full */
+}
+
+.row_1 > *:not(:last-child) {
+    border-bottom: 1px solid #d1d5db; /* divide-gray-300 */
+}
