--- a/src/app/home_page.module.css
+++ b/src/app/home_page.module.css
@@ -51,3 +51,30 @@
     width: 100%;
     border-top: 1px solid #d1d5db;
 }
+
+.leftContent {
+    width: 100%;
+    /* border-right: 2px solid #e5e7eb; */
+}
+
+.rightSidebar {
+    width: 100%;
+    margin-top: 16px;
+}
+
+.sidebarBox {
+    width: 100%;
+    background-color: #e5e7eb; /* bg-neutral-200 */
+    padding: 16px;
+    border-radius: 8px;
+}
+
+.sidebarTitle {
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: underline;
+    text-underline-offset: 8px;
+    text-decoration-color: #dc2626; /* decoration-red-600 */
+    margin-bottom: 8px;
+}
