--- a/src/components/MenuHeader/menu_header.module.css
+++ b/src/components/MenuHeader/menu_header.module.css
@@ -4,11 +4,11 @@
     position: sticky; /* sticky */
     top: 0; /* top-0 */
     z-index: 50;
-    background-color: #ff2a2d !important;
+    /* background-color: #ff2a2d !important; */
 }
 
 .nav_1 .ant-menu .ant-menu-item {
-    background-color: #ff2a2d !important;
+    /* background-color: #ff2a2d !important; */
     /* Màu nền */
     color: white !important;
     /* Màu chữ */
@@ -23,6 +23,7 @@
     gap: 1rem; /* space-x-4 */
     overflow-x: auto; /* overflow-x-auto */
     justify-content: center; /* justify-center */
+    background-color: white; /* bg-white */
 }
 
 /* Nếu bạn sử dụng plugin scrollbar-hide của Tailwind */
